--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,99 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1623774798911/work
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1623682484649/work
-astor @ file:///home/conda/feedstock_root/build_artifacts/astor_1593610464257/work
-astunparse @ file:///home/conda/feedstock_root/build_artifacts/astunparse_1610696312422/work
+absl-py==0.13.0
+aiohttp==3.7.4.post0
+appnope==0.1.2
+astor==0.8.1
+astunparse==1.6.3
 async-timeout==3.0.1
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
+attrs==21.2.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
 blinker==1.4
 brotlipy==0.7.0
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1619593780156/work
+cachetools==4.2.2
 certifi==2021.5.30
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1625835561163/work
-chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093477312/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
-click @ file:///Users/runner/miniforge3/conda-bld/click_1621503759047/work
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1616851512278/work
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.0
+click==8.0.1
+cryptography==3.4.7
 cycler==0.10.0
+Cython==0.29.23
+debugpy==1.4.1
+decorator==5.1.0
 docopt==0.6.2
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1617723079010/work
+entrypoints==0.3
+flatbuffers==1.12
 gast==0.3.3
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1627569118436/work
+gensim==4.0.1
+google-auth==1.34.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1619796055906/work
-h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1617739488066/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
-importlib-metadata @ file:///Users/runner/miniforge3/conda-bld/importlib-metadata_1627748944968/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
-Keras-Preprocessing @ file:///home/conda/feedstock_root/build_artifacts/keras-preprocessing_1610713559828/work
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1624925864380/work
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1614595805172/work
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1628521333196/work
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1624981215272/work
+grpcio==1.37.1
+h5py==2.10.0
+idna==3.1
+importlib-metadata==4.6.3
+ipykernel==6.4.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+joblib==1.0.1
+jupyter-client==7.0.2
+jupyter-core==4.7.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
+matplotlib==3.4.2
+matplotlib-inline==0.1.3
+multidict==5.1.0
+nest-asyncio==1.5.1
 numpy==1.19.5
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1622563202229/work
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-opt-einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1617859230218/work
+oauthlib==3.1.1
+olefile==0.46
+opt-einsum==3.3.0
 pandas==1.3.1
-Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1625678024115/work
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+pip==21.2.3
 pipreqs==0.4.10
+prompt-toolkit==3.0.20
 protobuf==3.15.8
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1619620644068/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
+pycparser==2.20
+Pygments==2.10.0
+PyJWT==2.1.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
-PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291493748/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
-pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
-requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1595492159598/work
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1614171254180/work
-scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1628432020987/work
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1628206458939/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1610699261066/work/tensorboard-2.4.1-py3-none-any.whl
-tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1611075653546/work/tensorboard_plugin_wit-1.8.0-py3-none-any.whl
-tensorflow @ file:///Users/uwe/miniconda3/conda-bld/tensorflow-split_1619499088398/work/tensorflow_pkg/tensorflow-2.4.1-cp38-cp38-macosx_10_9_x86_64.whl
-tensorflow-estimator @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-estimator_1610655765755/work/tensorflow_estimator-2.4.0-py2.py3-none-any.whl
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2021.1
+pyu2f==0.1.5
+pyzmq==22.3.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.7.1
+setuptools==49.6.0.post20210108
+six==1.16.0
+smart-open==5.2.1
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1626092076920/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1625489059091/work
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1622748266870/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1624634538755/work
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1621518206714/work
-wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1624971795890/work
+threadpoolctl==2.2.0
+tornado==6.1
+traitlets==5.1.0
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+wcwidth==0.2.5
+Werkzeug==2.0.1
+wheel==0.36.2
+wrapt==1.12.1
 yarg==0.1.9
-yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1625233054231/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1625284368454/work
+yarl==1.6.3
+zipp==3.5.0
