--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ requests-oauthlib==1.3.0
 rsa==4.7.2
 scikit-learn==0.24.2
 scipy==1.7.1
-setuptools==49.6.0.post20210108
+setuptools==49.6.0
 six==1.16.0
 smart-open==5.2.1
 tensorboard==2.4.1
